...
        position.dx + 1,
        position.dy + 1,
      ),
      items: [
        const PopupMenuItem<String>(
          value: 'delete',
          child: Text('Delete', style: TextStyle(color: Colors.red)),
        ),
      ],
    ).then((value) {
      if (value == 'delete') {
        _manager.deleteItem(item);
      }
...
    final tags = List<String>.from(_manager.currentList?.tags ?? [])
      ..sort((a, b) => a.toLowerCase().compareTo(b.toLowerCase()));

    // Create the dropdown items
    final dropdownItems = <DropdownMenuItem<String>>[
      DropdownMenuItem(
        value: 'All',
        child: Text(
          'All Categories',
          style: Theme.of(context).textTheme.labelSmall,
        ),
      ),
    ];
...
